# protobridge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  LICENSE.md  README.md  TODO.md
code/: .clang-format  CMakeLists.txt  CMakePresets.json  CppCheckSuppressions.txt  Dockerfile
code/bench/: README.md
code/cmake/: CreateApplication.cmake  CreateExecutable.cmake  CreateStaticLibrary.cmake  I2CDeviceLibrary.cmake.in
code/doxygen/: Doxyfile.in
code/examples/: CMakeLists.txt
code/examples/bme680/: CMakeLists.txt
code/examples/bmp180/: CMakeLists.txt
code/examples/common/: ExampleApp.hpp
code/examples/general/: CMakeLists.txt
code/examples/gpio/: CMakeLists.txt
code/examples/i2c/: CMakeLists.txt
code/examples/lm75/: main.cpp
code/examples/mcp23017/: CMakeLists.txt
code/examples/mpu6050/: CMakeLists.txt  main.cpp
code/experimental/: CMakeLists.txt  README.md
code/experimental/ftdi/: main.cpp
code/source/: CMakeLists.txt
code/source/devices/: ADS1015Controller.hpp  BME680Controller.cpp  BME680ControllerV2.cpp  BME680ControllerV2.hpp  BMP180Controller.cpp  BMP180Controller.hpp  CMakeLists.txt  Esc.hpp  I2CBusController.cpp  LM75Controller.cpp  MCP23017Controller.cpp  MCP23017Controller.hpp  MPU6050Controller.hpp  Relay.hpp  Servo.hpp  dummy.cpp
code/source/gpio/: CMakeLists.txt  Gpio.hpp  GpioFwd.hpp  GpioLine.cpp  GpioLine.hpp  README.md  RaspberryPi5Chip0.cpp  RaspberryPi5Chip0.hpp  Rpi5Chip0.cpp  Rpi5Chip0.hpp  Utils.cpp  Utils.hpp
code/source/i2c/: ADS1015Controller.cpp  ADS1015Controller.hpp  BME680Controller.cpp  BME680Controller.hpp  BME680ControllerV2.cpp  BME680ControllerV2.hpp  BMP180Controller.cpp  BMP180Controller.hpp  BMP388Controller.cpp  BMP388Controller.hpp  BusController.cpp  BusController.hpp  BusControllerBase.hpp  CMakeLists.txt  Controllers.hpp  ErrorCode.hpp  I2CBusController.cpp  I2CBusController.hpp  ICBase.cpp  ICBase.hpp  ICError.cpp  ICError.hpp  LM75Controller.cpp  LM75Controller.hpp  MCP23017Controller.cpp  MCP23017Controller.hpp  MCP23017Controller.ipp  MCP23017ControllerOld.cpp  MCP23017ControllerOld.hpp  MPU6050Controller.cpp  MPU6050Controller.hpp  MPU6050Definitions.hpp  MPU9250Controller.cpp  MPU9250Controller.hpp  MPU9250Definitions.hpp  PCA9685Controller.cpp  PCA9685Controller.hpp  SHT31Controller.cpp  SHT31Controller.hpp  TMP102Controller.cpp  (+1 more)
code/source/math/: CMakeLists.txt  ComplementaryFilter.hpp  Constants.hpp  Dummy.cpp  Dynamics.hpp  KalmanFilter.hpp  Linear.hpp  LinearBase.hpp  LinearFormat.hpp  Math.hpp  Matrix.hpp  Matrix12x12.hpp  Matrix2x2.hpp  Matrix2x2.ipp  Matrix3x3.hpp  Matrix3x3.ipp  Matrix4x4.hpp  Matrix4x4.ipp  Matrix6x6.hpp  Matrix6x6.ipp  MatrixBase.hpp  MatrixFormat.hpp  Modifiers.hpp  PID.hpp  PIDController.hpp  PIDModifiers.hpp  PredictionModels.hpp
code/source/serial/: BaudRate.hpp  CMakeLists.txt  SerialPort.cpp  SerialPort.hpp
code/source/spi/: BusController.cpp  BusController.hpp  CMakeLists.txt  MCP3008Controller.cpp  MCP3008Controller.hpp
code/source/threading/: CMakeLists.txt  MtQueue.hpp  MtQueue.ipp  SpinLock.cpp  SpinLock.hpp
code/source/utils/: Bit.hpp  CMakeLists.txt  CompactBitset.hpp  CompactBitset.ipp  ComplementaryFilter.hpp  Counter.hpp  EnumFlagSet.hpp  EnumFlagSet.ipp  Error.cpp  Error.hpp  ErrorCode.hpp  ErrorCodeFmt.hpp  FastPimpl.hpp  FixedString.hpp  KalmanFilter.hpp  Linear.hpp  Math.hpp  Matrix.hpp  Overloaded.hpp  PinConfig.hpp  PinConfig.ipp  PredictionModel.hpp  PredictionModels.hpp  RandomGenerator.hpp  Result.hpp  SpinLock.cpp  SpinLock.hpp  StaticString.hpp  TimeStamp.cpp  TimeStamp.hpp  TimeStep.hpp  TimeTypes.hpp  Timer.cpp  Timer.hpp  Timer.ipp  Utils.hpp  Vectors.hpp
code/test/: CMakeLists.txt
code/test/devices/: CMakeLists.txt
code/test/i2c/: BusControllerMock.hpp  BusControllerTests.cpp  CMakeLists.txt
code/test/math/: CMakeLists.txt  MathTest.cpp  Matrix2x2Test.cpp  Matrix3x3Test.cpp  Matrix4x4Test.cpp  Matrix6x6Test.cpp
code/test/threading/: CMakeLists.txt  MtQueueTests.cpp
code/test/utils/: BitTests.cpp  CMakeLists.txt  CompactBitsetTest.cpp  CompactBitsetTests.cpp  CounterTests.cpp  EnumFlagSetTests.cpp  FastPimplTests.cpp  MathTest.cpp  (+2 more)
code/utilities/: CMakeLists.txt
(+53 files in other folders)
